tests/baselines/reference/ArrowFunction3.errors.txt
==== tests/cases/compiler/ArrowFunction3.ts (1 errors) ====
    var v = (a): => {
                 ~~
!!! ArrowFunction3.ts(1,14): error TS1110: Type expected.
       
    };